target/generated-sources/antlr4/RulesParser.java
// Generated from Rules.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__34=1, T__33=2, T__32=3, T__31=4, T__30=5, T__29=6, T__28=7, T__27=8, 
		T__26=9, T__25=10, T__24=11, T__23=12, T__22=13, T__21=14, T__20=15, T__19=16, 
		T__18=17, T__17=18, T__16=19, T__15=20, T__14=21, T__13=22, T__12=23, 
		T__11=24, T__10=25, T__9=26, T__8=27, T__7=28, T__6=29, T__5=30, T__4=31, 
		T__3=32, T__2=33, T__1=34, T__0=35, SqString=36, RectString=37, CircleString=38, 
		ElString=39, LineString=40, PolyString=41, StarString=42, PolygonString=43, 
		TextString=44, DrawString=45, RotateString=46, ScaleString=47, CmtString=48, 
		LinkString=49, RegString=50, AddPtString=51, AddCurveString=52, AddQuadrString=53, 
		CloseString=54, GroupString=55, ClipString=56, PathString=57, MoveString=58, 
		SetClipString=59, TEXT=60, ID=61, INT=62, NEWLINE=63, WS=64;
	public static final String[] tokenNames = {
		"<INVALID>", "'height'", "'+='", "'s'", "'by'", "'inner'", "'w'", "'y'", 
		"';'", "'='", "'sw'", "'nSides'", "'h'", "'('", "'innerRadius'", "'-='", 
		"','", "'bx2'", "'by2'", "'n'", "'r'", "'t'", "'color'", "'bx'", "'x'", 
		"'width'", "'nTips'", "'stroke'", "'a'", "'angle'", "'c'", "'stroke-width'", 
		"')'", "'+'", "'radius'", "'-'", "SqString", "RectString", "CircleString", 
		"ElString", "'line'", "PolyString", "'star'", "PolygonString", "'text'", 
		"'draw'", "'rotate'", "'scale'", "CmtString", "'link'", "RegString", "AddPtString", 
		"AddCurveString", "AddQuadrString", "'close'", "'group'", "ClipString", 
		"'path'", "'move'", "'setClip'", "TEXT", "ID", "INT", "NEWLINE", "WS"
	};
	public static final int
		RULE_main = 0, RULE_command = 1, RULE_transform = 2, RULE_setvar = 3, 
		RULE_addpt = 4, RULE_addcurve = 5, RULE_addq = 6, RULE_close = 7, RULE_draw = 8, 
		RULE_scale = 9, RULE_rotate = 10, RULE_setClip = 11, RULE_move = 12, RULE_hyperlink = 13, 
		RULE_shape = 14, RULE_comment = 15, RULE_circle = 16, RULE_rect = 17, 
		RULE_sq = 18, RULE_ellipse = 19, RULE_line = 20, RULE_polyline = 21, RULE_star = 22, 
		RULE_polygon = 23, RULE_regular = 24, RULE_path = 25, RULE_attr = 26;
	public static final String[] ruleNames = {
		"main", "command", "transform", "setvar", "addpt", "addcurve", "addq", 
		"close", "draw", "scale", "rotate", "setClip", "move", "hyperlink", "shape", 
		"comment", "circle", "rect", "sq", "ellipse", "line", "polyline", "star", 
		"polygon", "regular", "path", "attr"
	};

	@Override
	public String getGrammarFileName() { return "Rules.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public TerminalNode EOF() { return getToken(RulesParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(RulesParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(RulesParser.NEWLINE, i);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitMain(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__27) | (1L << DrawString) | (1L << RotateString) | (1L << ScaleString) | (1L << LinkString) | (1L << AddPtString) | (1L << AddCurveString) | (1L << AddQuadrString) | (1L << CloseString) | (1L << MoveString) | (1L << SetClipString) | (1L << ID) | (1L << NEWLINE))) != 0)) {
				{
				setState(58);
				switch (_input.LA(1)) {
				case T__27:
				case DrawString:
				case RotateString:
				case ScaleString:
				case LinkString:
				case AddPtString:
				case AddCurveString:
				case AddQuadrString:
				case CloseString:
				case MoveString:
				case SetClipString:
				case ID:
					{
					setState(54); command();
					setState(55); match(T__27);
					}
					break;
				case NEWLINE:
					{
					setState(57); match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(63); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public DrawContext draw() {
			return getRuleContext(DrawContext.class,0);
		}
		public SetvarContext setvar() {
			return getRuleContext(SetvarContext.class,0);
		}
		public TransformContext transform() {
			return getRuleContext(TransformContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		try {
			setState(68);
			switch (_input.LA(1)) {
			case DrawString:
				enterOuterAlt(_localctx, 1);
				{
				setState(65); draw();
				}
				break;
			case T__27:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(66); setvar();
				}
				break;
			case RotateString:
			case ScaleString:
			case LinkString:
			case AddPtString:
			case AddCurveString:
			case AddQuadrString:
			case CloseString:
			case MoveString:
			case SetClipString:
				enterOuterAlt(_localctx, 3);
				{
				setState(67); transform();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransformContext extends ParserRuleContext {
		public MoveContext move() {
			return getRuleContext(MoveContext.class,0);
		}
		public ScaleContext scale() {
			return getRuleContext(ScaleContext.class,0);
		}
		public AddqContext addq() {
			return getRuleContext(AddqContext.class,0);
		}
		public HyperlinkContext hyperlink() {
			return getRuleContext(HyperlinkContext.class,0);
		}
		public AddptContext addpt() {
			return getRuleContext(AddptContext.class,0);
		}
		public CloseContext close() {
			return getRuleContext(CloseContext.class,0);
		}
		public RotateContext rotate() {
			return getRuleContext(RotateContext.class,0);
		}
		public AddcurveContext addcurve() {
			return getRuleContext(AddcurveContext.class,0);
		}
		public SetClipContext setClip() {
			return getRuleContext(SetClipContext.class,0);
		}
		public TransformContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transform; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterTransform(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitTransform(this);
		}
	}

	public final TransformContext transform() throws RecognitionException {
		TransformContext _localctx = new TransformContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_transform);
		try {
			setState(79);
			switch (_input.LA(1)) {
			case RotateString:
				enterOuterAlt(_localctx, 1);
				{
				setState(70); rotate();
				}
				break;
			case ScaleString:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); scale();
				}
				break;
			case LinkString:
				enterOuterAlt(_localctx, 3);
				{
				setState(72); hyperlink();
				}
				break;
			case AddPtString:
				enterOuterAlt(_localctx, 4);
				{
				setState(73); addpt();
				}
				break;
			case AddCurveString:
				enterOuterAlt(_localctx, 5);
				{
				setState(74); addcurve();
				}
				break;
			case AddQuadrString:
				enterOuterAlt(_localctx, 6);
				{
				setState(75); addq();
				}
				break;
			case SetClipString:
				enterOuterAlt(_localctx, 7);
				{
				setState(76); setClip();
				}
				break;
			case MoveString:
				enterOuterAlt(_localctx, 8);
				{
				setState(77); move();
				}
				break;
			case CloseString:
				enterOuterAlt(_localctx, 9);
				{
				setState(78); close();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetvarContext extends ParserRuleContext {
		public Token a;
		public Token x;
		public Token ar;
		public ShapeContext s;
		public Token d;
		public Token r;
		public Token g;
		public List<TerminalNode> ID() { return getTokens(RulesParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(RulesParser.ID, i);
		}
		public TerminalNode ClipString() { return getToken(RulesParser.ClipString, 0); }
		public ShapeContext shape() {
			return getRuleContext(ShapeContext.class,0);
		}
		public TerminalNode GroupString() { return getToken(RulesParser.GroupString, 0); }
		public SetvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setvar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterSetvar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitSetvar(this);
		}
	}

	public final SetvarContext setvar() throws RecognitionException {
		SetvarContext _localctx = new SetvarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_setvar);
		int _la;
		try {
			setState(151);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(81); ((SetvarContext)_localctx).a = match(ID);
				setState(82); match(T__26);
				setState(83); ((SetvarContext)_localctx).x = match(ID);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(84); match(T__2);
					setState(85); match(ID);
					}
					}
					setState(90);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(91); ((SetvarContext)_localctx).a = match(ID);
				setState(92); match(T__26);
				setState(93); ((SetvarContext)_localctx).ar = match(GroupString);
				setState(94); match(T__22);
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(95); match(ID);
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__19) {
						{
						{
						setState(96); match(T__19);
						setState(97); match(ID);
						}
						}
						setState(102);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(108); match(T__3);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(109); ((SetvarContext)_localctx).a = match(ID);
				setState(110); match(T__26);
				setState(111); ((SetvarContext)_localctx).s = shape();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(112); ((SetvarContext)_localctx).a = match(ID);
				setState(113); match(T__33);
				setState(114); ((SetvarContext)_localctx).d = match(ID);
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(115); match(T__2);
					setState(116); match(ID);
					}
					}
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(122); ((SetvarContext)_localctx).a = match(ID);
				setState(123); match(T__20);
				setState(124); ((SetvarContext)_localctx).r = match(ID);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(125); match(T__0);
					setState(126); match(ID);
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(132); ((SetvarContext)_localctx).a = match(ID);
				setState(133); match(T__26);
				setState(134); ((SetvarContext)_localctx).g = match(ClipString);
				setState(135); match(T__22);
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(136); match(ID);
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__19) {
						{
						{
						setState(137); match(T__19);
						setState(138); match(ID);
						}
						}
						setState(143);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					setState(148);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(149); match(T__3);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddptContext extends ParserRuleContext {
		public Token a;
		public Token x;
		public Token y;
		public AttrContext a1;
		public AttrContext a2;
		public TerminalNode INT(int i) {
			return getToken(RulesParser.INT, i);
		}
		public TerminalNode ID() { return getToken(RulesParser.ID, 0); }
		public AttrContext attr(int i) {
			return getRuleContext(AttrContext.class,i);
		}
		public List<AttrContext> attr() {
			return getRuleContexts(AttrContext.class);
		}
		public TerminalNode AddPtString() { return getToken(RulesParser.AddPtString, 0); }
		public List<TerminalNode> INT() { return getTokens(RulesParser.INT); }
		public AddptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addpt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterAddpt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitAddpt(this);
		}
	}

	public final AddptContext addpt() throws RecognitionException {
		AddptContext _localctx = new AddptContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_addpt);
		try {
			setState(170);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153); match(AddPtString);
				setState(154); match(T__22);
				setState(155); ((AddptContext)_localctx).a = match(ID);
				setState(156); match(T__19);
				setState(157); ((AddptContext)_localctx).x = match(INT);
				setState(158); match(T__19);
				setState(159); ((AddptContext)_localctx).y = match(INT);
				setState(160); match(T__3);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(161); match(AddPtString);
				setState(162); match(T__22);
				setState(163); ((AddptContext)_localctx).a = match(ID);
				setState(164); match(T__19);
				setState(165); ((AddptContext)_localctx).a1 = attr();
				setState(166); match(T__19);
				setState(167); ((AddptContext)_localctx).a2 = attr();
				setState(168); match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddcurveContext extends ParserRuleContext {
		public Token a;
		public AttrContext a1;
		public AttrContext a2;
		public AttrContext a3;
		public AttrContext a4;
		public AttrContext a5;
		public AttrContext a6;
		public TerminalNode ID() { return getToken(RulesParser.ID, 0); }
		public AttrContext attr(int i) {
			return getRuleContext(AttrContext.class,i);
		}
		public List<AttrContext> attr() {
			return getRuleContexts(AttrContext.class);
		}
		public TerminalNode AddCurveString() { return getToken(RulesParser.AddCurveString, 0); }
		public AddcurveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addcurve; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterAddcurve(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitAddcurve(this);
		}
	}

	public final AddcurveContext addcurve() throws RecognitionException {
		AddcurveContext _localctx = new AddcurveContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_addcurve);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172); match(AddCurveString);
			setState(173); match(T__22);
			setState(174); ((AddcurveContext)_localctx).a = match(ID);
			setState(175); match(T__19);
			setState(176); ((AddcurveContext)_localctx).a1 = attr();
			setState(177); match(T__19);
			setState(178); ((AddcurveContext)_localctx).a2 = attr();
			setState(179); match(T__19);
			setState(180); ((AddcurveContext)_localctx).a3 = attr();
			setState(181); match(T__19);
			setState(182); ((AddcurveContext)_localctx).a4 = attr();
			setState(188);
			_la = _input.LA(1);
			if (_la==T__19) {
				{
				setState(183); match(T__19);
				setState(184); ((AddcurveContext)_localctx).a5 = attr();
				setState(185); match(T__19);
				setState(186); ((AddcurveContext)_localctx).a6 = attr();
				}
			}

			setState(190); match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddqContext extends ParserRuleContext {
		public Token a;
		public AttrContext a1;
		public AttrContext a2;
		public AttrContext a3;
		public AttrContext a4;
		public TerminalNode ID() { return getToken(RulesParser.ID, 0); }
		public AttrContext attr(int i) {
			return getRuleContext(AttrContext.class,i);
		}
		public List<AttrContext> attr() {
			return getRuleContexts(AttrContext.class);
		}
		public TerminalNode AddQuadrString() { return getToken(RulesParser.AddQuadrString, 0); }
		public AddqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterAddq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitAddq(this);
		}
	}

	public final AddqContext addq() throws RecognitionException {
		AddqContext _localctx = new AddqContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_addq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192); match(AddQuadrString);
			setState(193); match(T__22);
			setState(194); ((AddqContext)_localctx).a = match(ID);
			setState(195); match(T__19);
			setState(196); ((AddqContext)_localctx).a1 = attr();
			setState(197); match(T__19);
			setState(198); ((AddqContext)_localctx).a2 = attr();
			setState(199); match(T__19);
			setState(200); ((AddqContext)_localctx).a3 = attr();
			setState(201); match(T__19);
			setState(202); ((AddqContext)_localctx).a4 = attr();
			setState(203); match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CloseContext extends ParserRuleContext {
		public Token a;
		public TerminalNode ID() { return getToken(RulesParser.ID, 0); }
		public TerminalNode CloseString() { return getToken(RulesParser.CloseString, 0); }
		public CloseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_close; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterClose(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitClose(this);
		}
	}

	public final CloseContext close() throws RecognitionException {
		CloseContext _localctx = new CloseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_close);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(205); match(CloseString);
			setState(206); match(T__22);
			setState(207); ((CloseContext)_localctx).a = match(ID);
			setState(208); match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DrawContext extends ParserRuleContext {
		public ShapeContext s;
		public Token a;
		public TerminalNode ID() { return getToken(RulesParser.ID, 0); }
		public ShapeContext shape() {
			return getRuleContext(ShapeContext.class,0);
		}
		public TerminalNode DrawString() { return getToken(RulesParser.DrawString, 0); }
		public DrawContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_draw; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterDraw(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitDraw(this);
		}
	}

	public final DrawContext draw() throws RecognitionException {
		DrawContext _localctx = new DrawContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_draw);
		try {
			setState(214);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(210); match(DrawString);
				setState(211); ((DrawContext)_localctx).s = shape();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(212); match(DrawString);
				setState(213); ((DrawContext)_localctx).a = match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScaleContext extends ParserRuleContext {
		public Token a;
		public Token i;
		public AttrContext a1;
		public AttrContext a2;
		public TerminalNode ID() { return getToken(RulesParser.ID, 0); }
		public AttrContext attr(int i) {
			return getRuleContext(AttrContext.class,i);
		}
		public List<AttrContext> attr() {
			return getRuleContexts(AttrContext.class);
		}
		public TerminalNode ScaleString() { return getToken(RulesParser.ScaleString, 0); }
		public TerminalNode INT() { return getToken(RulesParser.INT, 0); }
		public ScaleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scale; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).enterScale(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RulesListener ) ((RulesListener)listener).exitScale(this);
		}
	}

	public final ScaleContext scale() throws RecognitionException {
		ScaleContext _localctx = new ScaleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_scale);
		try {
			setState(231);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(216); match(ScaleString);
				setState(217); match(T__22);
				setState(218); ((ScaleContext)_localctx).a = match(ID);
				setState(219); match(T__19);
				setState(220); ((ScaleContext)_localctx).i = match(INT);
				setState(221); match(T__3);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
